[project]
name = "c8855-photoncounter"
version = "0.2.1"
description = "Gui for c8855-photon counter"
authors = [
    { name = "Jamin Martin", email = "jamin.martin1@gmail.com" }
]
dependencies = [
    "ttkbootstrap>=1.10.1",
    "matplotlib>=3.9.3",
    "spcs-instruments>=0.7.1",
]
readme = "README.md"
requires-python = ">= 3.8"

[project.gui-scripts]
"counter_gui" = "photoncounter.gui:run_app"

[project.scripts]
"configure_dll_c8855" = "photoncounter.configure:configure_photoncounter"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/photoncounter"]
